--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -r mauriciomta/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t mauriciomta/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true mauriciomta/react-test npm test
